# bhp-practice-jfr-2022

./: .gitignore  README.md  README.rst  netcat.py  pyproject.toml  run_script_formatting_tools.sh  setup.sh
bhp/: netcat.py  tcp_cli.py  tcp_server.py  udp_cli.py
