[tool.poetry]
name = "bhp"
version = "0.1.0"
description = "book examples"
authors = ["Juan Rojano <jfrojanoj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10" 

[tool.poetry.dev-dependencies]
black = "22.6.0"
flit = "3.7.1"
flake8 = "4.0.1"
flake8-docstrings = "1.6.0"
flake8-breakpoint = "1.1.0"
flake8-bugbear = "22.7.1"
flake8-comprehensions = "3.10.0"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
