[tool.poetry]
name = "bhp"
version = "0.1.0"
description = "book examples"
authors = ["Juan Rojano <jfrojanoj@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10" 

[tool.poetry.dev-dependencies]
black = "22.6.0"
flit = "3.7.1"
flake8 = "4.0.1"
flake8-docstrings = "1.6.0"
flake8-breakpoint = "1.1.0"
flake8-bugbear = "22.7.1"
flake8-comprehensions = "3.10.0"
mypy = "^0.961"
Sphinx = "5.0.2"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
exclude = [
    '^file1\.py$',  # TOML literal string (single-quotes, no escaping necessary)
    "^file2\\.py$",  # TOML basic string (double-quotes, backslash and other characters need escaping)
]

# mypy per-module options:

[[tool.mypy.overrides]]
module = "mycode.foo.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "mycode.bar"
warn_return_any = false

[[tool.mypy.overrides]]
module = [
    "somelibrary",
    "some_other_library"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

